[project]
name = "26-medical-device-agent"
version = "0.1.0"
description = "Medical Device Coordinator Agent - AgentCore"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore >= 1.0.3",
    "bedrock-agentcore-starter-toolkit >= 0.1.0",
    "boto3 >= 1.38.0",
    "requests >= 2.28.0",
    "strands-agents >= 1.18.0",
    "strands-agents-tools >= 0.2.16",
]

[project.optional-dependencies]
dev = ["pytest >= 7.0.0", "ruff >= 0.12.0", "bandit >= 1.9.0"]
