[project]
name = "27-enrollment-pulse"
version = "0.1.0"
description = "Enrollment Pulse Clinical Trial Optimization Agent - AgentCore"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore >= 1.0.3",
    "bedrock-agentcore-starter-toolkit >= 0.1.0",
    "boto3 >= 1.38.0",
    "pandas >= 1.5.0",
    "requests >= 2.28.0",
    "strands-agents >= 1.18.0",
    "strands-agents-tools >= 0.2.16",
]

[project.optional-dependencies]
dev = ["pytest >= 7.0.0", "ruff >= 0.12.0", "bandit >= 1.9.0"]
