[project]
name = "30-clinical-previsit-questionnaire"
version = "0.1.0"
description = "Clinical PreVisit Questionnaire Agent - AgentCore"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore >= 1.0.3",
    "bedrock-agentcore-starter-toolkit >= 0.1.0",
    "boto3 >= 1.38.0",
    "pydantic >= 2.0.0",
    "python-dateutil >= 2.8.2",
    "reportlab >= 3.6.0",
    "strands-agents >= 1.18.0",
    "strands-agents-tools >= 0.2.16",
]

[project.optional-dependencies]
dev = ["pytest >= 7.0.0", "ruff >= 0.12.0", "bandit >= 1.9.0"]
